third_party/rust/cxx/v1/crate/tests/ui/multiple_parse_error.rs
#[cxx::bridge]
mod ffi {
    struct Monad<T>;

    extern "Haskell" {}
}

fn main() {}
